--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 * * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in
 # parallel
