--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
     # Install dependencies with `pip`
     - name: Install requirements
       run: |
-        python3 -m pip install --upgrade pip setuptools wheel
+        python3 -m pip install setuptools wheel
         python3 -m pip install -r requirements.txt
 
     # Generate all statistics images
